2007-10-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.common.R (i.parse.plot.params) :
	check the existence of graphical arguments

2007-10-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_igraph_warning_handler)
	(R_igraph_before, R_igraph_before2, R_igraph_after, R_igraph_after2) :
	proper warnings added

2007-10-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_SEXP_igraph_arpack_options)
	(R_igraph_arpack_options_to_SEXP) : added
	* interfaces/R/igraph/R/centrality.R (igraph.arpack.default) : added

2007-10-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_igraph_attribute_copy) :
	updated, ga, va, ea attributes added

2007-10-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/centrality.R (evcent) : outdated, removed,
	new version is generated by stimulus

2007-10-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_igraph_vectorlist_to_SEXP)
	(R_igraph_vectorlist_destroy) : added

	* interfaces/R/igraph/R/conversion.R (get.adjlist, get.adjedgelist)
	* interfaces/R/src/rinterface.c.in (R_igraph_get_adjlist)
	(R_igraph_get_adjedgelist) : added

2007-10-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (graph.mincut)
	* interfaces/R/src/rinterface.c.in (R_igraph_mincut) : minimum cut
	calculation added

	* interfaces/R/igraph/R/foreign.R (read.graph.dimacs) : updated to 
	handle 'edge' problems
	* interfaces/R/src/rinterface.c.in (R_igraph_read_graph_dimacs) :
	updated

2007-10-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_igraph_attribute_init) :
	graph attribute handling added

2007-08-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/topology.R (graph.count.isomorphisms.vf2)
	(graph.get.isomorphisms.vf2, graph.subisomorphic.vf2)
	(graph.count.subisomorphisms.vf2, graph.get.subisomorphisms.vf2)